Описан протокол DASS, протоколы Эль-Гамаля, Диффи-Хеллмана и др. вынесены в отдельный раздел.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -719,6 +719,20 @@
 	language	= {English}
 }
 
+@misc{rfc1507,
+	author		= {Kaufman, Charlie},
+	title		= {DASS. Distributed Authentication Security Service.},
+	series		= {Request for Comments},
+	number		= {1507},
+	howpublished	= {RFC 1507 (Proposed Standard)},
+	publisher	= {IETF},
+	organization	= {Internet Engineering Task Force},
+	year		= {1993},
+	month		= {09},
+	url		= {https://tools.ietf.org/html/rfc1507},
+	language	= {English},
+}
+
 @incollection{Campbell:Wiener:1993,
 	author		= {Campbell, Keith W. and Wiener, Michael J.},
 	title		= {DES is not a Group},
