--- a/protocols/asymmetric.tex
+++ b/protocols/asymmetric.tex
@@ -1,19 +1,22 @@
-\section{Асимметричные протоколы}
-\selectlanguage{russian}
+\section{Криптосистемы-протоколы}
+Как и создатели трёхпроходных протоколов, авторы следующих алгоритмов считали их не просто математическими конструкциями, обеспечивающие некоторую элементарную операцию (например, шифрование с открытым ключом), но пытались вокруг одной-двух математических конструкций построить законченную систему распространения ключей. Некоторые из этих конструкций, преобразовавшись, используются до настоящего времени (например, протокол Диффи-Хеллмана), некоторые -- остались только в истории криптографии и защиты информации.
 
-Асимметричные протоколы, или же протоколы, основанные на криптосистемах с открытыми ключами, позволяют ослабить требования к предварительному этапу протоколов. Вместо общего секретного ключа, который должны иметь две стороны (либо каждая из сторон и доверенный центр), в рассматриваемых ниже протоколах стороны должны предварительно обменяться открытыми ключами (между собой либо с доверенным центром). Такой предварительный обмен может проходить по открытому каналу связи, в предположении, что криптоаналитик не может повлиять на содержимое канала связи на данном этапе.
+Позже в 1990-х годах будут разделены математические асимметричные примитивы (шифрование и электронная подпись) и протоколы, эти примитивы использующие, что будет продемонстрировано в разделе~\ref{section-protocols-asymmetric}.
 
 \input{diffie-hellman}
-
-%\section{Протоколы с аутентификацией}
-
-\subsection{Односторонняя аутентификация}
 
 \input{el-gamal}
 
 \input{mti}
 
 \input{sts}
+
+\section{Асимметричные протоколы}\label{section-protocols-asymmetric}
+\selectlanguage{russian}
+
+Асимметричные протоколы, или же протоколы, основанные на криптосистемах с открытыми ключами, позволяют ослабить требования к предварительному этапу протоколов. Вместо общего секретного ключа, который должны иметь две стороны (либо каждая из сторон и доверенный центр), в рассматриваемых ниже протоколах стороны должны предварительно обменяться открытыми ключами (между собой либо с доверенным центром). Такой предварительный обмен может проходить по открытому каналу связи, в предположении, что криптоаналитик не может повлиять на содержимое канала связи на данном этапе.
+
+\input{dass}
 
 \input{girault_scheme}
 
