--- a/protocols/el-gamal.tex
+++ b/protocols/el-gamal.tex
@@ -1,24 +1,29 @@
-\textbf{Протокол Эль-Гамаля}\index{протокол!Эль-Гамаля} относится к протоколам с аутентификацией одного из двух легальных пользователей.
+\subsection{Протокол Эль-Гамаля}\index{протокол!Эль-Гамаля|(}
 \selectlanguage{russian}
-\begin{enumerate}
-    \item Для начала стороны выбирают общие параметры $p, g$, где $p$ -- большое простое число, а $g$ -- примитивный элемент поля $\Z_p^*$.
-    \item Сторона $B$ создаёт свои закрытый и открытый ключи:
-            \[ \SK_B = b, ~ \PK_B = g^b \mod p, \]
-        $b$ -- случайное секретное число, $2 \leq b \leq p-1$.
 
-        Открытый ключ $\PK_B$ находится в общем открытом доступе для всех сторон, поэтому криптоаналитик $E$ не может подменить его -- подмена будет заметна.
-    \item Сторона $A$ вырабатывает свой секрет $x$, сеансовый ключ
-            \[ K_A = (\PK_B)^x = g^{bx} \mod p \]
-        и отправляет $B$:
-            \[ A \to B: ~ g^x \mod p. \]
-    \item Сторона $B$, получив от $A$ число $g^x \mod p$, использует его и свой секрет $\SK_B = b$, чтобы создать свой ключ
-            \[ K_B = (g^x)^{\SK_B} = g^{bx} \mod p, \]
-        то есть сеансовые ключи обеих сторон совпадают:
-            \[ K_A = K_B = K. \]
-\end{enumerate}
+\begin{figure}
+    \centering
+    \includegraphics[width=0.5\textwidth]{pic/key_distribution-el-gamal}
+    \caption{Взаимодействие участников в протоколе Эль-Гамаля\label{fig:key_distribution-el-gamal}}
+\end{figure}
 
-Достоинством этого протокола является следующее его свойство. Если ключи $K_A$ и $K_B$ совпали и стороны могут обмениваться информацией, то сторона $A$ аутентифицирует сторону $B$, так как для шифрования она использовала открытый ключ $B$, который не может быть незаметно подменён, и только сторона $B$ может расшифровывать сообщения.
+Протокол Эль-Гамаля (рис.~\ref{fig:key_distribution-el-gamal}) за счёт предварительного распространения открытого ключа одной из сторон обеспечивает аутентификацию ключа для этой стороны. Можно гарантировать, что только владелец соответствующего закрытого ключа сможет вычислить сеансовый ключ. Однако подтверждение факта получение ключа (выполнение целей G1 и G8) не является частью протокола.
 
-Что касается криптоаналитика в качестве <<человека посередине>>, то он может отправлять ложные сообщения, но не может узнать ключ $K$ и читать сообщения.
+\begin{protocol}
+    \item[(0)] Алиса и Боб выбирают общие параметры $p$ и $g$, где $p$ -- большое простое число, а $g$ -- примитивный элемент поля $\Z_p^*$.
+    \item[{}] Боб создаёт пару из закрытого и открытого ключей $b$ и $K_B$:
+        \[\begin{array}{l}
+            b: 2 \leq b \leq p - 1, \\
+            K_B = g^b \bmod p.
+        \end{array}\]
+    \item[{}] Открытый ключ $K_B$ находится в общем открытом доступе для всех сторон. Криптоаналитик не может подменить его -- подмена будет заметна.
+    \item[(1)] Алиса выбирает секрет $x$ и вычисляет сеансовый ключ $K$
+        \[ K = K_B^{x} = g^{bx} \bmod p. \]
+        \[ Alice \to \left\{ g^x \bmod p \right\} \to Bob\]
+    \item[(2)] Боб вычисляет сеансовый ключ
+        \[ K = (g^x)^{b} = g^{bx} \bmod p. \]
+\end{protocol}
 
-Есть протоколы, в которых стороны, осуществляющие обмен информацией, являются равноправными. Они называются протоколами взаимной аутентификации.
+Протокол не обеспечивает гарантию выбора нового сессионного ключа в каждом сеансе протокола (G10), а использование <<мастер>>-ключа $K_B$ для передачи сеансового ключа позволяет злоумышленнику вычислить все сессионные ключи из прошлых сеансов при компрометации закрытого ключа $b$ (цель G9).
+
+\index{протокол!Эль-Гамаля|)}
