Добавлен источник про протокол Эль-Гамаля

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -443,7 +443,7 @@
 	language	= {English},
 }
 
-@inproceedings{ElGamal:1985,
+@inproceedings{ElGamal:1984,
 	author		= {El Gamal, Taher},
 	title		= {A Public Key Cryptosystem and a Signature Scheme Based on Discrete Logarithms},
 	booktitle	= {Proceedings of CRYPTO 84 on Advances in Cryptology},
@@ -456,6 +456,19 @@
 	isbn		= {0-387-15658-5},
 	url		= {http://dl.acm.org/citation.cfm?id=19478.19480},
 	language	= {English},
+}
+
+@article{ElGamal:1985,
+    author      = {El Gamal, Taher},
+    journal     = {IEEE Transactions on Information Theory},
+    title       = {A public key cryptosystem and a signature scheme based on discrete logarithms},
+    year        = {1985},
+    volume      = {31},
+    number      = {4},
+    pages       = {469--472},
+    doi         = {10.1109/TIT.1985.1057074},
+    month       = {07},
+	language    = {English},
 }
 
 @incollection{Blom:1985,
