--- a/protocols/el-gamal.tex
+++ b/protocols/el-gamal.tex
@@ -7,7 +7,7 @@
     \caption{Взаимодействие участников в протоколе Эль-Гамаля\label{fig:key_distribution-el-gamal}}
 \end{figure}
 
-Протокол Эль-Гамаля (рис.~\ref{fig:key_distribution-el-gamal}) за счёт предварительного распространения открытого ключа одной из сторон обеспечивает аутентификацию ключа для этой стороны. Можно гарантировать, что только владелец соответствующего закрытого ключа сможет вычислить сеансовый ключ. Однако подтверждение факта получение ключа (выполнение целей G1 и G8) не является частью протокола.
+Протокол Эль-Гамаля (рис.~\ref{fig:key_distribution-el-gamal}, \cite{ElGamal:1984, ElGamal:1985}) за счёт предварительного распространения открытого ключа одной из сторон обеспечивает аутентификацию ключа для этой стороны. Можно гарантировать, что только владелец соответствующего закрытого ключа сможет вычислить сеансовый ключ. Однако подтверждение факта получение ключа (выполнение целей G1 и G8) не является частью протокола.
 
 \begin{protocol}
     \item[(0)] Алиса и Боб выбирают общие параметры $p$ и $g$, где $p$ -- большое простое число, а $g$ -- примитивный элемент поля $\Z_p^*$.
