Переписан раздел про протокол MTI/A(0)

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -522,6 +522,20 @@
 	note		= {US Patent 4,567,600}
 }
 
+@inproceedings{Matsumoto:Tsutomu:Imai:1986,
+    author      = {Matsumoto, Tsutomu and Takashima, Youichi and Imai, Hideki},
+    title       = {On seeking smart public-key-distribution systems},
+    year        = {1986},
+    month       = {02},
+    day         = {25},
+	booktitle	= {Trans. Inst. Electron. Commun. Eng. Jpn. Sect. E},
+    volume      = {69},
+    issue       = {2},
+    pages       = {99--106},
+	issn		= {0387-236X},
+	language	= {English},
+}
+
 @inproceedings{EichinRochlis:1988,
 	author		= {Eichin, Mark W. and Rochlis, Jon A.},
 	title		= {With Microscope and Tweezers: An Analysis of the Internet Virus of November 1988},
