--- a/protocols/three-pass.tex
+++ b/protocols/three-pass.tex
@@ -1,4 +1,4 @@
-\section{Трёхпроходные протоколы}
+\section{Трёхпроходные протоколы}\label{section-three-pass-protocols}
 \selectlanguage{russian}
 
 Если между Алисой и Бобом существует канал связи, недоступный для модификации злоумышленником (то есть когда применима модель только пассивного криптоаналитика), то даже без предварительного обмена секретными ключами или другой информацией можно воспользоваться идеями, использованными ранее в криптографии на открытых ключах. После описания RSA в 1978 году, в 1980 Ади Шамир предложил использовать криптосистемы, основанные на коммутативных операциях, для передачи информации без предварительного обмена секретными ключами. Если предположить, что передаваемой информацией является выработанный одной из сторон секретный сеансовый ключ, то в общем виде мы получаем следующий трёхпроходной протокол.
