Переписан раздел про протокол Station-to-Station

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -746,6 +746,20 @@
 	language	= {English}
 }
 
+@article{Diffie:Oorschot:Wiener:1992,
+    author      = {Diffie, Whitfield and Van Oorschot, Paul C. and Wiener, Michael J.},
+    title       = {Authentication and authenticated key exchanges},
+    journal     = {Designs, Codes and Cryptography},
+    year        = {1992},
+    month       = {06},
+    day         = {01},
+    volume      = {2},
+    number      = {2},
+    pages       = {107--125},
+    issn        = {1573-7586},
+    doi         = {10.1007/BF00124891},
+}
+
 @misc{rfc1507,
 	author		= {Kaufman, Charlie},
 	title		= {DASS. Distributed Authentication Security Service.},
@@ -801,6 +815,17 @@
 	isbn		= {978-3-540-49435-5},
 	doi		= {10.1007/BFb0015258},
 	language	= {English},
+}
+
+@inproceedings{Lowe:1996,
+	author      = {Lowe, Geawin},
+	title       = {Some new attacks upon security protocols},
+	booktitle   = {CSFW '96 Proceedings of the 9th IEEE workshop on Computer Security Foundations},
+	pages       = {162},
+    year        = {1996},
+	publisher   = {IEEE Computer Society},
+	address     = {Washington, DC, USA},
+	language    = {English},
 }
 
 @MISC{Entacher:1997,
