--- a/protocols/mti.tex
+++ b/protocols/mti.tex
@@ -1,4 +1,4 @@
-\subsection{Протокол MTI/A(0)}\label{section-protocols-mti}\index{протокол|MTI/A(0)|(}
+\subsection{Протокол MTI/A(0)}\label{section-protocols-mti}\index{протокол!MTI/A(0)|(}
 \selectlanguage{russian}
 
 В 1986 году Ц.~Мацумото (\langen{Tsutomu Matsumoto}), И.~Такашима (\langen{Youichi Takashima}) и Х.~Имаи (\langen{Hideki Imai}) предложили несколько алгоритмов, позже названных семейством протоколов MTI (\cite{Matsumoto:Tsutomu:Imai:1986}). За счёт предварительного распространения открытых ключей обоих сторон они обеспечивали неявную аутентификацию ключа (цель G7). То есть сессионный ключ гарантированно мог получить только владельцы соответствующих открытых ключей. Мы рассмотрим одного из представителей данного семейства -- протокол MTI/A(0) (рис.~\ref{fig:key_distribution-mti}).
@@ -36,4 +36,4 @@
 
 Как и другие представители криптосистем-протоколов, MTI не разрабатывался с учётом возможности компрометации закрытых <<мастер>>-ключей $a$ и $b$ (цель G9).
 
-\index{протокол|MTI/A(0)|)}
+\index{протокол!MTI/A(0)|)}
