--- a/protocols/cryptosystems-protocols.tex
+++ b/protocols/cryptosystems-protocols.tex
@@ -1,4 +1,4 @@
-\section{Криптосистемы-протоколы}\label{section-cryptosystems-protocols}
+\section{<<Криптосистемы-протоколы>>}\label{section-cryptosystems-protocols}
 \selectlanguage{russian}
 
 Как и создатели трёхпроходных протоколов из раздела~\ref{section-three-pass-protocols}, авторы следующих алгоритмов считали их не просто математическими конструкциями, обеспечивающие некоторую элементарную операцию (например, шифрование с открытым ключом), но пытались вокруг одной-двух математических конструкций построить законченную систему распространения ключей. Некоторые из этих конструкций, преобразовавшись, используются до настоящего времени (например, протокол Диффи-Хеллмана), некоторые -- остались только в истории криптографии и защиты информации.
