--- a/protocols/sts.tex
+++ b/protocols/sts.tex
@@ -66,7 +66,7 @@
     \item[{}] $Alice \to \left\{ A, B, E_K( S_A ( m_A, m_B ) ) \right\} \to Mellory~(Bob)$
 \end{protocol}
 
-После успешного завершения протокола Алиса уверена, что общается с Меллори.
+После успешного завершения протокола Алиса уверена, что общается с Бобом.
 
 Как и все остальные <<криптосистемы-протоколы>>, протокол Station-to-Station основывается на некотором внешнем источнике информации об открытых ключах участников, не подвергая сомнению корректность и надёжность этого источника. Что, в общем случае, неверно. Если информация о ключах участников нужно получать извне при каждом сеансе протокола (например, если участников много, и запомнить ключи всех возможности нет), то канал получения открытых ключей будет основной целью активного криптоаналитика для рассмотренных протоколов. Как от этого защититься с использованием примитивов асимметричной криптографии -- в следующем разделе.
 
